--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="#home" class="active">Home</a>
       <a href="#about">About</a>
       <a href="#skills">Skills and Technologies</a>
-      <a href="#portfolio">Portfolio</a>
+      <a href="#portfolio">Projects</a>
     </nav>
   </header>
 
@@ -46,7 +46,8 @@
         <a target="_blank" href="https://mail.google.com/mail/?view=cm&fs=1&to=ikmishra2002@gmail.com"><i
             class='bx bxl-gmail'></i></a>
       </div>
-      <a target="_blank" href="https://drive.google.com/file/d/1e6c47JVJLscSyWh04DOgy88AZvkYdUqn/view?usp=drive_link" class="btn">Download CV</a>
+      <a target="_blank" href="https://drive.google.com/file/d/1e6c47JVJLscSyWh04DOgy88AZvkYdUqn/view?usp=drive_link"
+        class="btn">Download CV</a>
     </div>
 
     <div class="home-img">
@@ -171,8 +172,20 @@
   <!-- portfolio section design -->
   <section class="portffolio" id="portfolio">
     <h2 class="heading">Latest <span>Projects</span></h2>
-
     <div class="portfolio-container">
+
+      <div class="portfolio-box">
+        <img src="images/portfolio3.png" alt="">
+        <div class="portfolio-layer">
+          <h4>Prime <span>Estate</span></h4>
+          <p>Prime Estate is a real estate application enabling users to buy, sell, and rent properties. Built with <span style="color: greenyellow;">React</span>, <span style="color: greenyellow;">Node.js</span>, and <span style="color: greenyellow;">MongoDB</span>.</p>
+          <div style="display: flex;">
+            <a target="_blank" href="https://prime-estate-zvpn.onrender.com/"><i class='bx bx-link-external'></i></a>
+            <a target="_blank" href="https://github.com/ishwar-ikm/Prime-Estate"><i class='bx bxl-github'></i></a>
+          </div>
+        </div>
+      </div>
+
       <div class="portfolio-box">
         <img src="images/portfolio1.jpg" alt="">
         <div class="portfolio-layer">
@@ -222,16 +235,6 @@
           </p>
           <a target="_blank" href="https://github.com/ishwar-ikm/Rainfall-Prediction-App"><i
               class='bx bxl-github'></i></a>
-        </div>
-      </div>
-      <div class="portfolio-box">
-        <img src="images/portfolio3.png" alt="">
-        <div class="portfolio-layer">
-          <h4>Password Manager</h4>
-          <p>Password Manager using the <span>MERN stack</span>. Is has features for securely storing and managing
-            passwords. The application supports <span>encryption</span>, <span>decryption</span>, and <span>CRUD
-              operations</span>.</p>
-          <a target="_blank" href="https://github.com/ishwar-ikm/Password-Manager"><i class='bx bxl-github'></i></a>
         </div>
       </div>
 
